<resources>
    <string name="app_name">ServerHealth</string>
    <string name="user_login">USER LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="verify_code">"Enter the verification code sent to your e-mail address."</string>
    <string name="verify_button">CONTINUE</string>
    <string name="verification">VERIFICATION</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="favourite">Favourites</string>
    <string name="refresh">Refresh</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_date_time">Data Date Tİme</string>
    <string name="hearbeat_status">Hearbeat Status</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="temperature_status">Temperature Status</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="ambient_temperature_status">Ambient Temperature Status</string>
    <string name="storage_usage">Storage Usage</string>
    <string name="energy_usage">Energy Usage</string>
    <string name="add">Add</string>
    <string name="server_name">Server Name</string>
    <string name="register">REGISTER</string>
    <string name="mail_address">Mail Address</string>
    <string name="mail">mail</string>
    <string name="login">LOGIN</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="applicationlogo">ApplicationLogo</string>
    <string name="add_server">Add Server</string>
    <string name="add_hospital">Add Hospital</string>
    <string name="import_server">Import Server</string>
    <string name="import_hospital">Import Hospital</string>
    <string name="server_ip">Server IP:</string>
    <string name="serveros">ServerOS:</string>
    <string name="windows">Windows</string>
    <string name="linux">Linux</string>
    <string name="server_ram">Server RAM:</string>
    <string name="server_storage_type">Server Storage:Type</string>
    <string name="ssd">SSD</string>
    <string name="hdd">HDD</string>
    <string name="server_storage_capacity">Server Storage Capacity</string>
    <string name="server_save">Server Save</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_save">Hospital Save</string>
    <string name="textview">TextView</string>
    <string name="_1_week">1 Week</string>
    <string name="_1_month">1 Month</string>
    <string name="_1_year">1 Year</string>
    <string name="health_data">Health Data</string>
    <string name="interrupts">Interrupts</string>
    <string name="report">Report</string>
    <string name="export">Export</string>
    <string name="count">Count</string>
    <string name="month">Month</string>
    <string name="id">ID:</string>
    <string name="status">Status:</string>
    <string name="time">Time:</string>
    <string name="server">Server:</string>
    <string name="city">City</string>


</resources>