<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="16dp"
            android:rowCount="4">

            <!-- TextViews for monitoring data -->

            <TextView
                android:id="@+id/dataDateTimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/data_date_time" />

            <TextView
                android:id="@+id/heartbeatStatusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/hearbeat_status" />

            <TextView
                android:id="@+id/cpuUsageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/cpu_usage" />

            <TextView
                android:id="@+id/temperatureStatusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/temperature_status" />

            <TextView
                android:id="@+id/ramUsageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ram_usage" />

            <TextView
                android:id="@+id/ambientTemperatureStatusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ambient_temperature_status" />

            <TextView
                android:id="@+id/StorageUsageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/storage_usage" />

            <TextView
                android:id="@+id/energyUsageTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/energy_usage" />
        </GridLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>