<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="16dp"
            android:rowCount="4">

            <!-- TextViews for monitoring data -->

            <TextView
                android:id="@+id/interruptIDTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/id" />

            <TextView
                android:id="@+id/interruptStatusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/status" />

            <TextView
                android:id="@+id/interruptDateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="Date:" />

            <TextView
                android:id="@+id/interruptTimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/time" />

            <TextView
                android:id="@+id/serverTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/server" />

        </GridLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>