<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_color"
    android:fillViewport="true"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/RefreshLineerLayout">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">
            <Button
                android:id="@+id/add_server_button"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/add_server"
                app:rippleColor="@color/brandSecondaryColor" />

            <Button
                android:id="@+id/add_hospital_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:text="@string/add_hospital"
                app:rippleColor="@color/brandSecondaryColor" />

            <Button
                android:id="@+id/serverImportButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/import_server"
                app:rippleColor="@color/brandSecondaryColor"/>

            <Button
                android:id="@+id/hospitalImportButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/import_hospital"
                app:rippleColor="@color/brandSecondaryColor"/>

        </GridLayout>
    </LinearLayout>


    <!-- First FrameLayout -->
    <FrameLayout
        android:id="@+id/first_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RefreshLineerLayout"
        android:visibility="gone">

        <!-- First FrameLayout for 4 TextInputEditText -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="69.89dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextServerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Server Name:"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textSecondaryColor"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="69.89dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextServerIP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/server_ip"
                    android:paddingBottom="10dp"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textSecondaryColor"/>


            </LinearLayout>




            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="69.89dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/serveros"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroupServerOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <!-- RadioButton Windows -->
                    <RadioButton
                        android:id="@+id/radioButtonWindows"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/windows"
                        android:textColor="@color/textPrimaryColor" />

                    <!-- RadioButton Linux -->
                    <RadioButton
                        android:id="@+id/radioButtonLinux"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linux"
                        android:textColor="@color/textPrimaryColor" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="69.89dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextServerRAM"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/server_ram"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textSecondaryColor" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="69.89dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/server_storage_type"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroupServerStorageType"
                    android:outlineAmbientShadowColor="@color/textPrimaryColor"
                    android:outlineSpotShadowColor="@color/brandPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- RadioButton SSD -->
                    <RadioButton
                        android:id="@+id/radioButtonSSD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ssd"
                        android:textColor="@color/textPrimaryColor" />

                    <!-- RadioButton HDD -->
                    <RadioButton
                        android:id="@+id/radioButtonHDD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hdd"
                        android:textColor="@color/textPrimaryColor" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_gravity="center"
                android:layout_height="69.89dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextServerStorageCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/server_storage_capacity"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textSecondaryColor" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <Spinner
                android:id="@+id/hospitalSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/server_save_button"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/server_save"
                app:rippleColor="@color/brandSecondaryColor" />

        </LinearLayout>
    </FrameLayout>

    <!-- Second FrameLayout -->
    <FrameLayout
        android:id="@+id/second_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RefreshLineerLayout"
        android:visibility="gone">

        <!-- Second FrameLayout for 2 TextInputEditText and 1 TextView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:padding="16dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="69.89dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextHospitalName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hospital_name"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textSecondaryColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <Spinner
                android:id="@+id/citySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/hospital_save_button"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/hospital_save"
                app:rippleColor="@color/brandSecondaryColor" />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
</ScrollView>